--- a/box/index.html
+++ b/box/index.html
@@ -13,12 +13,19 @@
         <div class="line top"></div>
         <div class="line right"></div>
         <div class="line bottom"></div>
+        <div class="caption">
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
     </div>
     <div class="image">
         <div class="line left"></div>
         <div class="line top"></div>
         <div class="line right"></div>
         <div class="line bottom"></div>
+        <div class="caption">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, repellat?</p>
+        </div>
     </div>
 </body>
 </html>
